--- a/T4Generators.csproj
+++ b/T4Generators.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{558D619B-0B4B-4658-A041-71D211CD84D9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataProvider</RootNamespace>
-    <AssemblyName>DataProvider</AssemblyName>
+    <RootNamespace>T4Generators</RootNamespace>
+    <AssemblyName>T4Generators</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,9 +37,21 @@
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 12.0\Common7\IDE\Extensions\Microsoft\SQLDB\DAC\120\Microsoft.SqlServer.Dac.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TextTemplating.12.0, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity.Design" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,23 +59,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>CommonAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="CreateMethodBuilder.cs" />
-    <Compile Include="DatabaseModelTransformation.cs" />
-    <Compile Include="DeleteMethodBuilder.cs" />
-    <Compile Include="IMethodBuilder.cs" />
-    <Compile Include="IndexMethodBuilder.cs" />
-    <Compile Include="MethodBuilderBase.cs" />
-    <Compile Include="MethodSignature.cs" />
+    <Compile Include="Database\CreateMethodBuilder.cs" />
+    <Compile Include="Database\DatabaseModelTransformation.cs" />
+    <Compile Include="Database\DeleteMethodBuilder.cs" />
+    <Compile Include="Database\IMethodBuilder.cs" />
+    <Compile Include="Database\IndexMethodBuilder.cs" />
+    <Compile Include="Database\MethodBuilderBase.cs" />
+    <Compile Include="Database\MethodSignature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadMethodBuilder.cs" />
-    <Compile Include="Schema\ColumnInfo.cs" />
-    <Compile Include="Schema\DatabaseSchema.cs" />
-    <Compile Include="Schema\IndexInfo.cs" />
-    <Compile Include="Schema\TableInfo.cs" />
-    <Compile Include="UpdateMethodBuilder.cs" />
+    <Compile Include="Database\ReadMethodBuilder.cs" />
+    <Compile Include="Database\Schema\ColumnInfo.cs" />
+    <Compile Include="Database\Schema\DatabaseSchema.cs" />
+    <Compile Include="Database\Schema\IndexInfo.cs" />
+    <Compile Include="Database\Schema\TableInfo.cs" />
+    <Compile Include="Database\UpdateMethodBuilder.cs" />
+    <Compile Include="WebApi\ApiActionMetadata.cs" />
+    <Compile Include="WebApi\WebApiTransformation.cs" />
+    <Compile Include="WebApi\XmlDocumentationProvider.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
